--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@mantine/core": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
+    "@mantine/notifications": "^7.17.0",
     "@tabler/icons-react": "^2.47.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
