--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ sqlalchemy==2.0.23
 alembic==1.12.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6 
+python-multipart==0.0.6
+psycopg2-binary==2.9.9
+email-validator==2.1.0.post1
+openpyxl==3.1.2 
